force-app/main/default/objects/QuoteLineItem/fields/netsuite_conn__Discount_Item__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Discount_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Discount Item</label>
    <referenceTo>netsuite_conn__Discount_Item__c</referenceTo>
    <relationshipLabel>Quote Line Items</relationshipLabel>
    <relationshipName>Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>