force-app/main/default/objects/QuoteLineItem/fields/netsuite_conn__NetSuite_Item_Id_Import__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__NetSuite_Item_Id_Import__c</fullName>
    <label>NetSuite Item Id Import</label>
    <length>255</length>
    <type>Text</type>
</CustomField>