force-app/main/default/objects/QuoteLineItem/fields/netsuite_conn__Pushed_From_NetSuite__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Pushed_From_NetSuite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pushed From NetSuite</label>
    <type>Checkbox</type>
</CustomField>